requirements.txt edited online with Bitbucket

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+apiclient==1.0.2
 Django==1.8.2
-psycopg2==2.6
-youtube-dl==2015.5.20
+django-filter==0.10.0
 djangorestframework==3.1.2
-#django-filter==0.10.0(optional)
-#Markdown==2.6.2(optional)
+egenix-mx-base==3.2.8
+google-api-python-client==1.4.0
+httplib2==0.9.1
+Markdown==2.6.2
+oauth2client==1.4.11
+psycopg2==2.6
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
+rsa==3.1.4
+simplejson==3.7.3
+six==1.9.0
+uritemplate==0.6
+urlfetch==1.0.2
+wheel==0.24.0
+youtube-dl==2015.5.20
